# cw-course

./: .gitignore
counting_contract/: Cargo.toml
counting_contract/src/: contract.rs  error.rs  lib.rs  msg.rs  multitest.rs
counting_contract/src/multitest/: contract.rs  tests.rs
counting_contract_0.2/: Cargo.toml
counting_contract_0.2/src/: msg.rs
counting_contract_0.2/src/multitest/: contract.rs  tests.rs
