[package]
name = "counting_contract"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []
tests = ["library", "cw-multi-test"]

[dependencies]
cosmwasm-schema = "1.1.9"
cosmwasm-std = "1.1.9"
cw-multi-test = { version = "0.16.2", optional = true }
cw-storage-plus = "1.0.1"
schemars = "0.8.11"
serde = { version = "1.0.151", features = ["derive"] }
thiserror = "1.0.38"

[dev-dependencies]
counting-contract-0_1 = { git = "ssh://github.com/shifty11/cw-course.git", tag = "0.1.0", package = "counting_contract", features = ["tests"] }
cw-multi-test = "0.16.2"
